--- a/login.html
+++ b/login.html
@@ -7,13 +7,15 @@
     <title>Instgram Login</title>
     <link rel="stylesheet" href="/login.css">
     <style>
-        
+
     </style>
     
 
 </head>
 <body>
     <div id="screen">
+        <div id="left"></div>
+        <div id="right"></div>
 
 
     </div>
