--- a/singup.html
+++ b/singup.html
@@ -66,6 +66,7 @@
         /* height: 320px; */
         width: 80%;
         /* border:1px solid red; */
+        margin-top: 15PX;
         margin-bottom: 10px;
          margin-left: 25PX;
 
@@ -76,6 +77,7 @@
         margin-bottom: 10px;
         padding-left: 5px;
         border:1px solid gainsboro;
+        background-color: rgb(223, 219, 219);
     }
     #form>p{
         margin-top: 10px;
