--- a/singup.html
+++ b/singup.html
@@ -151,7 +151,7 @@
             
                 <div>
                 
-                    <form onsubmit="signup(event)">
+                    <form onsubmit="Signup(event)">
                         <div id="form">
                             <div><input id="name" type="text" placeholder=" Enter Your Name"/></br></div>
                             <div><input id="email" type="email" placeholder="Enter Email Id"/></br></div>
