--- a/login.html
+++ b/login.html
@@ -39,8 +39,8 @@
             <div>
                 <form onsubmit="login(event)">
                    <div id="form"> 
-                    <div><input id="iemail" type="email" placeholder="Enter Email Id"/></br></div>
-                   <div><input id="ipassword" type="password" placeholder="password"/></br></div>
+                    <div><input id="lemail" type="email" placeholder="Enter Email Id"/></br></div>
+                   <div><input id="lpassword" type="password" placeholder="password"/></br></div>
                    <div><input type="submit" value="Login"/></div>
                 </div>
                 </form>
