--- a/homepage.html
+++ b/homepage.html
@@ -12,15 +12,28 @@
         margin: 0%;
         box-sizing: border-box;
     }
+    #screen{
+        height: 1000px;
+        width: 100%;
+        border:4px solid red;
+    }
+    #body{
+        height: 800px;
+        width:100%;
+        padding: 5px;
+        border:1px solid green;
+        display: flex;
+    }
+
 
 </style>
 </head>
 <body>
     <div id="screen">
         <div id="body">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div id="left"></div>
+            <div id="middle"></div>
+            <div id="right"></div>
         </div>
 
     </div>
