--- a/homepage.html
+++ b/homepage.html
@@ -31,7 +31,7 @@
         width: 18%;
         /* border:4px solid blue; */
         padding: 15px;
-        /* position: fixed; */
+        position: fixed;
     }
   
     #logo{
@@ -88,6 +88,7 @@
         width:45%;
         /* border:1px solid brown; */
         background-color:rgb(254,250,250);
+        padding-left: 135px;
 
     }
     #story{
@@ -95,7 +96,7 @@
         width: 82%;
         border:1px solid gainsboro;
         margin-top: 30px;
-        margin-left: 18%;
+        margin-left: 23%;
          display: flex;
 
 
@@ -175,8 +176,8 @@
     
      }
      #mainpost>img{
-        height: 100%;
-        width: 100%;
+        height: 50%;
+        width: 50%;
      }
 
 
