--- a/profile.html
+++ b/profile.html
@@ -136,6 +136,14 @@
                 </div>
 
             </div>
+            <div id="right">
+                <div id="profile">
+                    <div></div>
+
+                </div>
+                
+
+            </div>
 
 
         </div>
