--- a/profile.html
+++ b/profile.html
@@ -251,7 +251,7 @@
                         <div id="info">
                             <div id="name">
                              <h4>Kundu Anu</h4>
-                            <button tyle="cursor:pointer", onclick="window.location.href='./profile.html'">Edit Profile</button>
+                            <button tyle="cursor:pointer", onclick="window.location.href='./editprofile.html'"> Edit Profile</button>
                             </div>
                             <div>
                             <p>15 Post</p>
