--- a/addprofilepost.html
+++ b/addprofilepost.html
@@ -17,8 +17,8 @@
     <script>
         function addprofilepost(event){
             event.preventDefault();
-            var image=document.getElementById("Userimage").value;
-            var detail=document.getElementById("Userdetails").value;
+            var Userimage=document.getElementById("Userimage").value;
+            var Userdetails=document.getElementById("Userdetails").value;
         
             var postdata={Userimage,Userdetails};
 
