--- a/editprofile.html
+++ b/editprofile.html
@@ -372,7 +372,8 @@
     </div>
     <script>
         window.onload=function(){
-            var divProfile=document.getElementById("profile");
+            
+            var divForProfile=document.getElementById("profile");
             var ProfileData=JSON.parse(localStorage.getItem("editprofile"));
             var changeProfile=` <div>
                                 <img src="${ProfileData.pimage}" />
