--- a/profile.html
+++ b/profile.html
@@ -204,15 +204,17 @@
         }
 
         #post>div {
-            width: 40%;
+            width: 32%;
             height: 250px;
             /* border:1px solid black; */
             margin-bottom: 5px;
+            margin-top: 10px;
         }
 
         #post>div>img {
             height: 100%;
             width: 100%;
+            margin-top: 12px;
         }
     </style>
 </head>
@@ -280,8 +282,9 @@
                     <div id="info">
                         <div id="name">
                             <h4>Kundu Anu</h4>
-                            <button tyle="cursor:pointer" , onclick="window.location.href='./editprofile.html'"> Edit
-                                Profile</button>
+                            <button style="cursor: pointer;"onclick= "window.location.href='./editprofile.html'">Edit Profile</button>
+
+
                         </div>
                         <div>
                             <p>15 Post</p>
