--- a/editprofile.html
+++ b/editprofile.html
@@ -190,14 +190,14 @@
     #profile{
         height:150px;
         width:100%;
-        border:1px solid gainsboro;
+        /* border:1px solid gainsboro; */
         display: flex;
         
     }
     #profile>div:nth-child(1){
         width:50%;
         height:100%;
-        border:1px solid brown;
+        /* border:1px solid brown; */
         display: flex;
         align-items: center;
         justify-content: center;
@@ -205,7 +205,7 @@
     #profile>div:nth-child(1)>img{
         height:90%;
         width:90%;
-        border-radius: 10%;
+        border-radius: 50%;
     }
     #profile>div:nth-child(2){
         width:50%;
@@ -214,9 +214,12 @@
        
     }
     #profile>div:nth-child(2)>p:nth-child(1){
+        margin-top: 25px;
+        margin-left: 15px;
         font-weight: bold;
         margin-bottom: 20px;
         font-size: 22px;
+        /* text-align: center; */
     }
     #editprofile{
         width:100%;
