--- a/homepage.html
+++ b/homepage.html
@@ -236,7 +236,8 @@
                         <i class="fa-sharp fa-solid fa-house"></i>
                         <p>Home</p>
                     </div>
-                    <div>
+                    <div style="cursor: pointer;"; onclick="window.location.href=`./search.html`">
+
                         <i class="fa-regular fa-magnifying-glass"></i>
                         <p>Search</p>
                     </div>
