--- a/editprofile.html
+++ b/editprofile.html
@@ -206,6 +206,7 @@
         height:90%;
         width:90%;
         border-radius: 50%;
+        margin-left: 10px;
     }
     #profile>div:nth-child(2){
         width:50%;
@@ -218,8 +219,8 @@
         margin-left: 15px;
         font-weight: bold;
         margin-bottom: 20px;
-        font-size: 22px;
-        /* text-align: center; */
+        font-size: 28px;
+        text-align: center;
     }
     #editprofile{
         width:100%;
@@ -259,7 +260,8 @@
                     <img src ="./images.png"/>
                 </div>
                 <div id="icons">
-                    <div>
+                    <div style="cursor: pointer;"; onclick="window.location.href=`./homepage.html`">
+
                         <i class="fa-sharp fa-solid fa-house"></i>
                         <p>Home</p>
                     </div>
