--- a/homepage.html
+++ b/homepage.html
@@ -253,7 +253,7 @@
                         <i class="fa-brands fa-wpexplorer"></i>
                         <p>Explore</p>
                     </div>
-                    <div>
+                    <div style="cursor: pointer;"; onclick="window.location.href=`./addpost.html`">
                         <i class="fa-solid fa-video"></i>
                         <p>Reels</p>
 
