--- a/homepage.html
+++ b/homepage.html
@@ -233,8 +233,8 @@
                     </div>
                     <div input type="text" onkeyup="myFunction()" >
 
-                        <i class="fa-regular fa-magnifying-glass"></i>
-                        <p>Search</p>
+                        <i class="fa-solid fa-magnifying-glass"></i>                     
+                           <p>Search</p>
                     </div>
                     <div id="Searchbar" >
                         <div>
