--- a/profile.html
+++ b/profile.html
@@ -238,8 +238,8 @@
                     <p>Home</p>
                 </div>
                 <div>
-                    <i class="fa-regular fa-magnifying-glass"></i>
-                    <p>Search</p>
+                    <i class="fa-solid fa-magnifying-glass"></i>                 
+                       <p>Search</p>
                 </div>
                 <div>
                     <i class="fa-brands fa-wpexplorer"></i>
