--- a/homepage.html
+++ b/homepage.html
@@ -169,11 +169,11 @@
      }
      #mainpost{
         /* margin-top: 45px; */
-        height: 500px;
-        width:82%;
+        height: 350px;
+        width:86%;
         border:1px solid gainsboro;
         margin-left: 45px;
-        background-color: white;
+        /* background-color: white; */
         margin-top: 25px;
 
     
@@ -183,6 +183,9 @@
         width: 100%;
      }
 
+     #mainpost>p{
+        margin-top: 10px;
+     }
 
 
      
